src/test/ui/parser/removed-syntax-fixed-vec.stderr
error: expected one of `!`, `(`, `+`, `::`, `;`, `<`, or `]`, found `*`
  --> $DIR/removed-syntax-fixed-vec.rs:1:17
   |
LL | type v = [isize * 3];
   |                 ^ expected one of 7 possible tokens here

error: aborting due to previous error

